# cocotkit

./: .gitignore  README.md  pyproject.toml
src/cocotkit/: coco.py  draw.py  main.py  resolver.py  split.py  tasks.py
src/cocotkit/cli/: registry.py
src/cocotkit/cli/commands/: __init__.py  catmerge.py  convert.py  csv2coco.py  draw.py  filter.py  merge.py  partition.py  split.py  stats.py
src/cocotkit/converters/: yolo.py
src/cocotkit/io/: mapper.py  reader.py  writer.py
src/cocotkit/query/: expressions.py  operators.py  queryset.py  transforms.py
src/cocotkit/resolvers/: path.py
tests/: conftest.py
tests/base/: test_coco.py
tests/fixtures/: coco.py
tests/io/: test_mappers.py
tests/query/: test_expressions.py
