[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cocotkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "orjson>=3.11.8",
    "pillow>=12.2.0",
]

[project.scripts]
cocotkit = "cocotkit.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
